// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render with other prop 1`] = `
.c2 {
  background-color: #fff;
  border-radius: 16px;
  box-shadow: 0px 0px 15px rgba(0,0,0,0.25);
}

.c0 {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: -15px;
  margin-left: -15px;
}

@media (min-width:1400px) {
  .c0 {
    max-width: 1140px;
  }
}

@media (max-width:992px) {
  .c0 {
    max-width: 960px;
  }
}

@media (max-width:768px) {
  .c0 {
    max-width: 720px;
  }
}

@media (max-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

<div>
  <section
    class="section"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          data-testid="wrapper"
          id="test-id"
        >
          Text
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Section should render with prop name 1`] = `
.c2 {
  background-color: #fff;
  border-radius: 16px;
  box-shadow: 0px 0px 15px rgba(0,0,0,0.25);
}

.c0 {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: -15px;
  margin-left: -15px;
}

@media (min-width:1400px) {
  .c0 {
    max-width: 1140px;
  }
}

@media (max-width:992px) {
  .c0 {
    max-width: 960px;
  }
}

@media (max-width:768px) {
  .c0 {
    max-width: 720px;
  }
}

@media (max-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

<div>
  <section
    class="section-about"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
